Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10544

Galera: Failing assertion: (lock->trx)->wait_lock == lock

Details

    Description

      perl ./runall-new.pl --gendata=conf/engines/engine_stress.zz --grammar=conf/engines/engine_stress.yy --basedir=$BASEDIR
      

      160810 19:38:07 [ERROR] mysqld: Deadlock found when trying to get lock; try restarting transaction
      160810 19:38:08 [ERROR] mysqld: Deadlock found when trying to get lock; try restarting transaction
      InnoDB: DEBUG: update_statistics for test/table100_key_pk_parts_2_int_autoinc#P#p1.
      160810 19:38:08 [ERROR] mysqld: Deadlock found when trying to get lock; try restarting transaction
      160810 19:38:08  InnoDB: Assertion failure in thread 140529396664064 in file lock0lock.c line 802
      InnoDB: Failing assertion: (lock->trx)->wait_lock == lock
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: http://dev.mysql.com/doc/refman/5.5/en/forcing-innodb-recovery.html
      InnoDB: about forcing recovery.
      160810 19:38:08 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see http://kb.askmonty.org/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 5.5.51-MariaDB-wsrep-debug
      key_buffer_size=134217728
      read_buffer_size=131072
      max_used_connections=11
      max_threads=153
      thread_count=11
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 466872 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0x7fcf691fd060
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7fcf8cc4be40 thread_stack 0x48000
      mysys/stacktrace.c:246(my_print_stacktrace)[0xd211c4]
      sql/signal_handler.cc:155(handle_fatal_signal)[0x7f42a0]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x10330)[0x7fcf8bf3f330]
      /lib/x86_64-linux-gnu/libc.so.6(gsignal+0x37)[0x7fcf8af5bc37]
      /lib/x86_64-linux-gnu/libc.so.6(abort+0x148)[0x7fcf8af5f028]
      lock/lock0lock.c:803(lock_reset_lock_and_trx_wait)[0xc64880]
      lock/lock0lock.c:2467(lock_grant)[0xc67cf8]
      lock/lock0lock.c:4459(lock_table_dequeue)[0xc6ba69]
      lock/lock0lock.c:6160(lock_release_autoinc_last_lock)[0xc6f6c5]
      lock/lock0lock.c:6191(lock_release_autoinc_locks)[0xc6f7bb]
      lock/lock0lock.c:4617(lock_cancel_waiting_and_release)[0xc6bfa2]
      lock/lock0lock.c:4022(lock_table_create)[0xc6ac93]
      lock/lock0lock.c:4232(lock_table_enqueue_waiting)[0xc6b492]
      lock/lock0lock.c:4371(lock_table)[0xc6b816]
      row/row0mysql.c:1053(row_lock_table_autoinc_for_mysql)[0xb3198e]
      handler/ha_innodb.cc:6601(ha_innobase::innobase_lock_autoinc())[0xaf336b]
      handler/ha_innodb.cc:6652(ha_innobase::innobase_set_max_autoinc(unsigned long long))[0xaf3430]
      handler/ha_innodb.cc:6997(ha_innobase::write_row(unsigned char*))[0xaf4222]
      sql/handler.cc:5290(handler::ha_write_row(unsigned char*))[0x7ff6dd]
      sql/ha_partition.cc:3602(ha_partition::write_row(unsigned char*))[0xce863e]
      sql/handler.cc:5290(handler::ha_write_row(unsigned char*))[0x7ff6dd]
      sql/sql_insert.cc:1848(write_record(THD*, TABLE*, st_copy_info*))[0x5f7947]
      sql/sql_insert.cc:3607(select_insert::send_data(List<Item>&))[0x5fc39b]
      sql/sql_select.cc:18073(end_send)[0x674cb4]
      sql/sql_select.cc:17169(evaluate_join_record)[0x672ac0]
      sql/sql_select.cc:16989(sub_select(JOIN*, st_join_table*, bool))[0x6725b4]
      sql/sql_select.cc:16612(do_select)[0x671c9b]
      sql/sql_select.cc:2873(JOIN::exec())[0x64ee67]
      sql/sql_select.cc:3096(mysql_select(THD*, Item***, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x64f675]
      sql/sql_select.cc:319(handle_select(THD*, LEX*, select_result*, unsigned long))[0x645bcd]
      sql/sql_parse.cc:3416(mysql_execute_command(THD*))[0x616844]
      sql/sql_parse.cc:6541(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x6202bf]
      sql/sql_parse.cc:6376(wsrep_mysql_parse)[0x61faf2]
      sql/sql_parse.cc:1253(dispatch_command(enum_server_command, THD*, char*, unsigned int))[0x610ef7]
      sql/sql_parse.cc:885(do_command(THD*))[0x60fae5]
      sql/sql_connect.cc:1287(do_handle_one_connection(THD*))[0x722043]
      sql/sql_connect.cc:1201(handle_one_connection)[0x721dc2]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x8184)[0x7fcf8bf37184]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7fcf8b01f37d]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7fcf691f4078): INSERT LOW_PRIORITY IGNORE INTO `table2_key_pk_parts_2_int_autoinc` ( `col_int_key` ) SELECT `col_char_12_key` FROM `table100_key_pk_parts_2_int_autoinc` AS X WHERE X.`col_char_12_key` BETWEEN 134 AND 1319567360 ORDER BY `col_char_12`,`col_char_12_key`,`col_int`,`col_int_key`,`pk` LIMIT 8
      Connection ID (thread ID): 9
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=off
       
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
      Writing a core file
      Aborted (core dumped)
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              nirbhay_c Nirbhay Choubey (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.