MDEV-10544: Galera: Failing assertion: (lock->trx)->wait_lock == lock

In Galera case this assertion is too strict as conflicting lock
could be same as lock here.